force-app/main/default/objects/custom_create119__c/custom_create119__c.object-meta.xml
<CustomObject>
    <label>Custom created object119</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects119</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>