force-app/main/default/objects/custom_create119__c/fields/custom_create_119field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_119field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 119field522</label>
    <type>Checkbox</type>
</CustomField>